--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
       crossorigin="anonymous"
     ></script>
     <script src="index.js"></script>
-    <script
+    <!-- <script
       async
       defer
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDtIITd8ipPMoXbPwDLZdKoKZO4SP_pXJ8&callback=initMap"
-    ></script>
-    <link rel="stylesheet" href="index copy.css" />
+    ></script> -->
+    <link rel="stylesheet" href="index.css" />
 
     <title>My Portfolio</title>
-    <link rel="icon" type="image/x-icon" href="/img/faviconimg.png">
+    <link rel="icon" type="image/x-icon" href="img/faviconimg.png">
   </head>
   <body>
     <header>
@@ -85,14 +85,14 @@
                     ><i class="fa-brands fa-linkedin-in"></i
                   ></a>
                 </li>
-                <li class="abtsocicons">
+                <!-- <li class="abtsocicons">
                   <a href=""><i class="fa-brands fa-instagram"></i></a>
                 </li>
                 <li class="abtsocicons">
                   <a href=""><i class="fa-brands fa-twitter"></i></a>
-                </li>
+                </li> -->
                 <li class="abtsocicons">
-                  <a href=""><i class="fa-brands fa-github"></i></a>
+                  <a href="https://github.com/ankush-khera09"><i class="fa-brands fa-github"></i></a>
                 </li>
               </ul>
             </div>
@@ -102,9 +102,9 @@
             <div id="abtintro-info">
               <h2 id="iam">Hi! I am</h2>
               <h1 id="ak">Ankush Khera</h1>
-              <div><h2 id="fsd">Full Stack Developer</h2></div>
+              <div><h2 id="fsd">Software Engineer</h2></div>
               <a
-                href="https://drive.google.com/u/0/uc?id=1wHO8euEvh2ZZ3akM2ZZN_hwgb-TXw-y-&export=download"
+                href="https://drive.google.com/u/7/uc?id=193E-wa1Rfaz35QHFisH2n7LqaBQvVO0K&export=download"
                 target="_blank"
                 ><button id="cvbut">Download Resume</button></a
               >
@@ -113,7 +113,7 @@
 
           <div class="abtdivchild" id="abtpic">
             <div id="abtpicdp">
-              <img src="img/dp.png" alt="profilePic" />
+              <img src="img/Formal-removebg.png" alt="profilePic" />
             </div>
           </div>
         </div>
@@ -139,7 +139,7 @@
               <span style="font-size: 120%; color: var(--color-darkblue)">
                 Gfg
               </span>
-              <span style="color: var(--color-lightblue)">200+ score</span>
+              <span style="color: var(--color-lightblue)">200+ solved</span>
             </div>
           </div>
 
@@ -151,9 +151,9 @@
             <!-- </div> -->
             <div class="abtpilldes">
               <span style="font-size: 120%; color: var(--color-darkblue)">
-                Conference Paper
+                2 Conference Papers
               </span>
-              <span style="color: var(--color-lightblue)">Published</span>
+              <span style="color: var(--color-lightblue)">Co-author</span>
             </div>
           </div>
         </div>
@@ -163,7 +163,7 @@
         <div id="aboutme">
           <div id="abtmepic">
             <div id="mepic">
-              <img src="img/dp.png" alt="dp" />
+              <img src="img/aboutme-removebg.png" alt="dp" />
             </div>
           </div>
 
@@ -180,12 +180,17 @@
                 About Me
               </h1>
               <div class="image-container">
-                <img src="img/dp.png" alt="dp" />
+                <img src="img/aboutme-removebg.png" alt="dp" />
               </div>
               <p style="text-align: justify">
-                A third year Computer Science Engineering Student enthusiastic about learning new technologies and looking for an opportunity to enhance my skills by working with like-minded people. I'm a well-organised man who
-                enjoys breaking complex problems into simpler ones and solving
-                them.
+                As a Computer Science Engineering
+                student, I am passionate about coding
+                and creating innovative solutions. I have
+                excellent problem-solving and analytical
+                skills, thrive in collaborative environments,
+                and am eager to leverage my technical
+                expertise to contribute to a dynamic
+                organization's success.
               </p>
             </div>
 
@@ -278,14 +283,14 @@
               </div>
             </div>
             <div class="skillsbar">
-              <div class="skillsbarin" style="width: 90%">
+              <div class="skillsbarin" style="width: 60%">
                 <div>
                   <span>Java</span>
                 </div>
               </div>
             </div>
             <div class="skillsbar">
-              <div class="skillsbarin" style="width: 100%">
+              <div class="skillsbarin" style="width: 90%">
                 <div>
                   <span>Javascript</span>
                 </div>
@@ -294,21 +299,35 @@
             <div class="skillsbar">
               <div class="skillsbarin" style="width: 90%">
                 <div>
-                  <span>Node Js</span>
-                </div>
-              </div>
-            </div>
-            <div class="skillsbar">
-              <div class="skillsbarin" style="width: 100%">
-                <div>
-                  <span>React Js</span>
+                  <span>Node JS</span>
                 </div>
               </div>
             </div>
             <div class="skillsbar">
               <div class="skillsbarin" style="width: 90%">
                 <div>
+                  <span>React JS</span>
+                </div>
+              </div>
+            </div>
+            <div class="skillsbar">
+              <div class="skillsbarin" style="width: 80%">
+                <div>
                   <span>Mongo DB</span>
+                </div>
+              </div>
+            </div>
+            <div class="skillsbar">
+              <div class="skillsbarin" style="width: 100%">
+                <div>
+                  <span>SQL / MySQL</span>
+                </div>
+              </div>
+            </div>
+            <div class="skillsbar">
+              <div class="skillsbarin" style="width: 70%">
+                <div>
+                  <span>Angular JS</span>
                 </div>
               </div>
             </div>
@@ -340,7 +359,7 @@
 
                 <div class="boxcont" id="eduboxcont">
                   <div class="eduexpbox" id="edubox1">
-                    <h3>Bachelor of Engineering (9.99 cgpa)</h3>
+                    <h3>Bachelor of Engineering (9.88 cgpa)</h3>
                     <h4 class="organi">Chitkara University, Punjab</h4>
                     <h4>
                       <i class="fa-solid fa-calendar-days"></i>&emsp;2020-24
@@ -379,11 +398,11 @@
 
                 <div class="boxcont" id="expboxcont">
                   <div class="eduexpbox" id="expbox1">
-                    <h3>Content Coordinator</h3>
-                    <h4 class="organi">IEEE CIET</h4>
+                    <h3>Software Engineer Intern</h3>
+                    <h4 class="organi">NI (National Instruments)</h4>
                     <h4>
                       <i class="fa-solid fa-calendar-days"></i
-                      >&emsp;Feb-May 2022
+                      >&emsp;July-Dec 2023
                     </h4>
                   </div>
                   <div class="eduexpbox" id="expbox2">
@@ -418,34 +437,41 @@
           <div id="projcont">
             <div class="projbox">
               <div class="pboxicon">
-                <i class="fa-solid fa-calculator"></i>
+                <i class="fa-solid fa-note-sticky"></i>
               </div>
-              <div class="pboxinfo">
-                <h2>Calculator</h2>
+              <!-- <a href="https://ankush-calculator.netlify.app/" style="text-decoration: none;"> -->
+                <div class="pboxinfo">
+                <h2>NoteMate</h2>
                 <p>
-                  Made a whole working Calculator using HTML, CSS & Javascript
+                  MERN Stack Note-taking app with CRUD functions
                 </p>
               </div>
+              <!-- </a> -->
             </div>
+
             <div class="projbox" id="projboxhosp">
               <div class="pboxicon" id="projboxhospicon">
-                <i class="fa-solid fa-stethoscope"></i>
+                <i class="fa-solid fa-earth-americas"></i>
               </div>
               <div class="pboxinfo" id="projboxhospinfo">
-                <h2>Hospital Website</h2>
-                <p>Developed a fully responsive website for a Hospital</p>
+                <h2>News360</h2>
+                <p>Built with ReactJS, shows real-time breaking NEWS</p>
               </div>
             </div>
 
             <div class="projbox">
               <div class="pboxicon">
-                <i class="fa-solid fa-user"></i>
+                <i class="fa-solid fa-stethoscope"></i>
               </div>
+              <!-- <a href="https://quadcarehospital.netlify.app/" style="text-decoration: none;"> -->
               <div class="pboxinfo">
-                <h2>My Portfolio</h2>
-                <p>This Portfolio website using HTML, CSS & JS</p>
+                <h2>Hospital Website</h2>
+                <p>Developed a fully responsive website for a Hospital</p>
               </div>
+              <!-- </a> -->
             </div>
+
+            <!-- hidden project divs -->
             <div class="projbox projboxhid">
               <div class="pboxicon">
                 <i class="fa-solid fa-music"></i>
